--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 	<meta property="og:title" content="HeyDoc AI - Personalized Health, Powered by WellnessGPT">
     <meta property="og:description" content="Personalized, AI-powered healthcare with ABHA integration. Manage your medical records, book appointments, and receive tailored health insights with WellnessGPT.">
     <meta property="og:image" content="img/about/banner.webp">
-    <meta property="og:url" content="https://www.heydoc.co.in">
-	<link rel="canonical" href="https://www.heydoc.co.in">
+    <meta property="og:url" content="https://www.wellness-gpt.com">
+	<link rel="canonical" href="https://www.wellness-gpt.com">
 	<script src="https://kit.fontawesome.com/060f122a39.js" crossorigin="anonymous"></script>
 
 
@@ -42,7 +42,7 @@
 					<div class="row row--flex row--flex-vcen" role="navigation">
 						<div class="col col--fixed header__side layered">
 							<div class="col col--fixed header__side layered">
-								<a href="https://www.heydoc.co.in" aria-label="Homepage" class="header_icon__logo">
+								<a href="https://www.wellness-gpt.com" aria-label="Homepage" class="header_icon__logo">
 
 
 									<img src="img/logo/heydoc_logo.png"> </a>
@@ -57,7 +57,7 @@
 									<div class="col col--stretch e2-2 ">
 										<ul class="header__nav header__nav--main ">
 											<li class="header__item " style="transition-delay:0.35s,0.35s">
-												<a class="h header__link  " href="https://www.heydoc.co.in">
+												<a class="h header__link  " href="https://www.wellness-gpt.com">
 													Home
 												</a>
 											</li>
