--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 
 
 <!-- fevicon icon add -->
-	<link rel="icon" type="image/x-icon" href="./img/logo/fevi2.png" />
+	<link rel="icon" type="image/x-icon" href="./img/logo/fevicon.png" />
 <!-- fevicon icon add end -->
 
 	<link rel="stylesheet" href="assets/css/final_83d433b8.css" media="screen" />
 	<link rel="stylesheet" href="assets/css/animate.css">
-	<title itemprop="name">WellnessGPT - Personalized Healt powered by AI</title>
+	<title itemprop="name">WellnessGPT for business | Personalized Health powered by HeyDoc AI</title>
     <style>
 	</style>
 
