added content and linking

--- a/index.html
+++ b/index.html
@@ -57,39 +57,34 @@
 									<div class="col col--stretch e2-2 ">
 										<ul class="header__nav header__nav--main ">
 											<li class="header__item " style="transition-delay:0.35s,0.35s">
-												<a class="h header__link  " href="https://www.wellness-gpt.com">
-													Home
+												<a class="h header__link  " href="https://heydoc.co.in">
+													Patients
 												</a>
 											</li>
 		
 											<li class="header__item " style="transition-delay:0.51s,0.51s">
-												<a class="h header__link   " href="#">
+												<a class="h header__link   " href="https://heydoc.co.in">
 													Doctors
 												</a>
 											</li>
 											<li class="header__item " style="transition-delay:0.51s,0.51s">
-												<a class="h header__link  " href="#">
+												<a class="h header__link  " href="https://heydoc.co.in">
 													Hospitals
 												</a>
 											</li>
 											<li class="header__item " style="transition-delay:0.59s,0.59s">
-												<a class="h header__link  " href="abdm.html">
+												<a class="h header__link  " href="https://heydoc.co.in/abdm.html">
 													ABDM
 												</a>
 											</li>
 											<li class="header__item " style="transition-delay:0.67s,0.67s">
-												<a class="h header__link  " href="abdm.html">
+												<a class="h header__link  " href="https://forms.gle/ovwj9HLPMaPL4sgh6">
 													Contact Us  
 												</a>
 											</li>
 											<li class="header__item " style="transition-delay:0.67s,0.67s">
 												<a class="h header__link  " href="#">
 													Security
-												</a>
-											</li>
-											<li class="header__item " style="transition-delay:0.67s,0.67s">
-												<a class="h header__link  " href="#">
-													About        
 												</a>
 											</li>
 										</ul>
@@ -131,10 +126,10 @@
 
 									<p class="h2--sec carousel__smaller_title wow typeset">WellnessGPT for business</p>
 									<h2 class="hero-tagline carousel__title wow typeset">WellnessGPT’s leading models and<br> products power digital health businesses</h2>
-									<p class="h2--sec carousel__desc wow typeset">Enable your employees, automate operations,<br> and enhance products with industry-leading AI</p>
+									<p class="h2--sec carousel__desc wow typeset">Power your digital health product with <br>India's only AI model built on government's ABDM </p>
 									<div  style="margin-bottom: 20px; ">
 										<div class="particles__container"><canvas></canvas></div><a
-											href="https://heydoc.co.in/share-profile?hip-id=<hipid>&counter-id=<counterid>"
+											href="https://forms.gle/ovwj9HLPMaPL4sgh6"
 											class="particles__btn comic-button wow" target="_blank" rel="noopener">
 											Talk with our team →</a>
 									</div>
@@ -425,10 +420,7 @@
 																			<div
 																				class="page__header__qr-code-fallback__button">
 																				<div >
-																					<div class="particles__container">
-																						<canvas width="0" height="0"
-																							style="width: 0px; height: 0px;"></canvas>
-																					</div>
+																					
 																					<a href="https://heydoc.co.in/share-profile?hip-id=<hipid>&counter-id=<counterid>"
 																						class="particles__btn  comic-button"
 																						target="_blank" rel="noopener">
@@ -845,16 +837,16 @@
 							<div class="container container--m container--inset-l">
 								<div class="row row--gutter-m ">
 									<div class="col a6-12 d1-2 i2-2">
-										<h2 class="h2 h2--m h2--gutter-m h2--pri  animate fadeInUp one">Connected Care Approach</h2>
-										<p class="section__heading section__heading--l wow" style="color: #000000;">Unified platform for seamless healthcare</p>
+										<h2 class="h2 h2--m h2--gutter-m h2--pri  animate fadeInUp one">Personalized conversations experience</h2>
+										<p class="section__heading section__heading--l wow" style="color: #000000;">Real-Time Responses, Aligned with Your Brand</p>
 										<div class="typeset ">
 											<div class="section__summary">
-												<p style="color: #000000; transition-delay: 0ms;" class="wow">
-													HeyDoc bridges the gap between you and your healthcare providers, ensuring everyone is on the same page and working together for your health</p>
-													<ul class="wow">
-														<li>Unified Health Records</li>
-														<li>Real-Time Updates</li>
-														<li>Comprehensive Care</li>
+												<p style="color: #000000; transition-delay: 0ms;" >
+													WellnessGPT’s ABHA-compliant chatbot solution integrates seamlessly with your platform to deliver real-time responses that align with your brand and leverage secure patient data. This provides users with interactions that feel personal and consistent with their health history.													<ul class="wow">
+														<li>Brand-Aligned Conversational Style</li>
+														<li>Integration with Proprietary and ABHA Data</li>
+														<li>Real-Time Personalization</li>
+														<li>Customizable Tone and Language for User Engagement</li>
 													  </ul>
 													  <div class="work-slide__meta-container" style="padding-left: 10px; justify-content: flex-start;">
 														<!-- <div class="work-slide__qr-code-container">
@@ -868,7 +860,7 @@
 																class="page__header__qr-code-fallback__button">
 																<div >
 																	<div class="particles__container"><canvas></canvas></div><a
-											href="https://heydoc.co.in/share-profile?hip-id=<hipid>&counter-id=<counterid>"
+											href="https://forms.gle/ovwj9HLPMaPL4sgh6"
 											class="particles__btn comic-button wow" target="_blank" rel="noopener">
 											Talk with our team →</a>
 									
@@ -1082,18 +1074,17 @@
 								<div class="row row--gutter-m row--reverse">
 									<div class="col a6-12 d1-2 i2-2">
 										<h2 class="h2 h2--m h2--gutter-m h2--pri  animate fadeInUp one">
-											Holistic Family Health Monitoring</h2>
-										<p class="section__heading section__heading--l wow" style="color: #000000;">Manage Your Family's Health with Ease
+											Health Product Recommendations</h2>
+										<p class="section__heading section__heading--l wow" style="color: #000000;">Boost Engagement and Drive Loyalty
 										</p>
 										<div class="typeset ">
 											<div class="section__summary" >
-												<p style="color: #000000;"class="wow">
-													Keep track of your family's health with personalized insights and recommendations from WellnessGPT
-												</p>
-												<ul class="wow">
-													<li>Family health profiles and tracking</li>
-													<li>Personalized health recommendations for each family member</li>
-													<li>Integrated care plans for family wellness</li>
+												<p style="color: #000000;">
+													WellnessGPT’s ABHA-compliant integration personalizes product recommendations by securely linking health records with user preferences and your catalog. This helps users find exactly what they need, boosting engagement and brand loyalty.												<ul class="wow">
+													<li>Catalog-Based Personalization</li>
+													<li>ABHA-Driven Product Personalization</li>
+													<li>Health Goal Alignment with User Preferences</li>
+													<li>Improved Sales and User Engagement</li>
 												  </ul>
 												  <div class="work-slide__meta-container" style="padding-left: 10px; justify-content: flex-start;">
 													<!-- <div class="work-slide__qr-code-container">
@@ -1110,7 +1101,7 @@
 																	<canvas width="0" height="0"
 																		style="width: 0px; height: 0px;"></canvas>
 																</div>
-																<a href="https://heydoc.co.in/share-profile?hip-id=<hipid>&counter-id=<counterid>"
+																<a href="https://forms.gle/ovwj9HLPMaPL4sgh6"
 																	class="particles__btn  comic-button wow"
 																	target="_blank" rel="noopener">
 																	Talk with our team →</a>
@@ -1316,12 +1307,12 @@
 										<p class="section__heading section__heading--l wow" style="color: #000000;">Powered with Wellness Score</p>
 										<div class="typeset ">
 											<div class="section__summary">
-												<p style="color: #000000;" class="wow">Optimize model performance for your use case by tuning our model and response structure
+												<p style="color: #000000;" >WellnessGPT personalizes health service suggestions by securely accessing and analyzing user data. This enables truly individualized care recommendations from your offerings, increasing user satisfaction and loyalty.
 												</p>
-												<ul class="wow">
+												<ul>
 													<li>Accelerate your digital health business with AI-powered solutions for customer services, consultation, knowledge management and recommendation</li>
-													<li>Seamless Claims</li>
-													<li>Integrated Management</li>
+													<li>Scalable, Accessible Healthcare Solutions</li>
+													<li>Integrated Integration with Proprietary and ABHA Data</li>
 												  </ul>
 												  <div class="work-slide__meta-container" style="padding-left: 10px; justify-content: flex-start;">
 													<!-- <div class="work-slide__qr-code-container">
@@ -1338,7 +1329,7 @@
 																	<canvas width="0" height="0"
 																		style="width: 0px; height: 0px;"></canvas>
 																</div>
-																<a href="https://heydoc.co.in/share-profile?hip-id=<hipid>&counter-id=<counterid>"
+																<a href="https://forms.gle/ovwj9HLPMaPL4sgh6"
 																	class="particles__btn  comic-button wow"
 																	target="_blank" rel="noopener">
 																	Talk with our team →</a>
@@ -1754,7 +1745,7 @@
 			
 													<div class="particles wow">
 														<div class="particles__container wow"><canvas width="614" height="338"
-																style="width: 307px; height: 169px;"></canvas></div><a href="#"
+																style="width: 307px; height: 169px;"></canvas></div><a href="https://forms.gle/ovwj9HLPMaPL4sgh6"
 															class="particles__btn comic-button btn--fill-quaternary color-inherit  btn--shadow">
 															Contact Us </a>
 													</div>
