added footer links

--- a/index.html
+++ b/index.html
@@ -2115,9 +2115,9 @@
                                 <h3 class="h footer__heading">Services</h3>
                                 <ul class="footer__list">
 									<li><a href="https://heydoc.co.in" class="a2 footer__link">For Patients </a></li>
-									<li><a href="#" class="a2 footer__link">Doctors</a></li>
-									<li><a href="#" class="a2 footer__link">Hospitals</a></li>
-									<li><a href="abdm.html" class="a2 footer__link" rel="noopener">ABDM</a>
+									<li><a href="https://heydoc.co.in" class="a2 footer__link">Doctors</a></li>
+									<li><a href="https://heydoc.co.in" class="a2 footer__link">Hospitals</a></li>
+									<li><a href="https://heydoc.co.in/abdm.html" class="a2 footer__link" rel="noopener">ABDM</a>
 									</li>
 									<li><a href="#" class="a2 footer__link" rel="noopener">Security</a>
 									</li>
