modifed url image

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="keywords" content="HeyDoc AI, HeyDoc, hey doc,hey doc ai, Wellness, WellnessGPT, AI healthcare, ABHA, PHR, Ayushman Bharat, health management, wellness score, medical records, personalized healthcare, health tracker, fitness, nutrition, mental health, telemedicine, family health tracking, insurance management">
 	<meta property="og:title" content="WellnessGPT for business - Power your digital health product with India's only AI model built on government's ABDM">
     <meta property="og:description" content="Personalized, AI-powered healthcare with ABHA integration. Manage your medical records, book appointments, and receive tailored health insights with WellnessGPT.">
-    <meta property="og:image" content="img/logo/wellnessgpt_logo.png">
+    <meta property="og:image" content="img/logo/url-image.png">
     <meta property="og:url" content="https://www.wellness-gpt.com">
 	<link rel="canonical" href="https://www.wellness-gpt.com">
 	<script src="https://kit.fontawesome.com/060f122a39.js" crossorigin="anonymous"></script>
