modifed image animations

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 									<div  style="margin-bottom: 20px; ">
 										<div class="particles__container"><canvas></canvas></div><a
 											href="https://forms.gle/ovwj9HLPMaPL4sgh6"
-											class="particles__btn comic-button wow" target="_blank" rel="noopener">
+											class="particles__btn comic-button " target="_blank" rel="noopener">
 											Talk with our team →</a>
 									</div>
 								</div>
@@ -330,7 +330,7 @@
 							
 								<div class="container container--m container--inset-l carousel__desc_align">
 
-									<h2 class="h2 h2--m h2--gutter-m h2--pri  animate fadeInUp one">WellnessGPT powers HeyDoc</h2>
+									<h2 class="h2 h2--m h2--gutter-m h2--pri  animate fadeInUp one">WellnessGPT powers HeyDoc Application</h2>
 									<p class="h2--sec carousel__desc wow typeset">
 										<span style="color: #000000;font-weight: 600; font-family: Arial, Helvetica, sans-serif; text-transform: capitalize; transition-delay: 0ms;">Wellness</span><span style="color: #5e17eb;font-weight: 600; font-family: Arial, Helvetica, sans-serif; text-transform: capitalize; transition-delay: 3ms;">GPT</span> understands that every user is unique, creating personalized health profiles to deliver tailored care and support.</p>
 									</h2>
@@ -837,12 +837,12 @@
 							<div class="container container--m container--inset-l">
 								<div class="row row--gutter-m ">
 									<div class="col a6-12 d1-2 i2-2">
-										<h2 class="h2 h2--m h2--gutter-m h2--pri  animate fadeInUp one">Personalized conversations experience</h2>
+										<h2 class="h2 h2--m h2--gutter-m h2--pri  animate fadeInUp one wow">Personalized conversations experience</h2>
 										<p class="section__heading section__heading--l wow" style="color: #000000;">Real-Time Responses, Aligned with Your Brand</p>
 										<div class="typeset ">
 											<div class="section__summary">
 												<p style="color: #000000; transition-delay: 0ms;" >
-													WellnessGPT’s ABHA-compliant chatbot solution integrates seamlessly with your platform to deliver real-time responses that align with your brand and leverage secure patient data. This provides users with interactions that feel personal and consistent with their health history.													<ul class="wow">
+													WellnessGPT’s ABHA-compliant chatbot solution integrates seamlessly with your platform to deliver real-time responses that align with your brand and leverage secure patient data. This provides users with interactions that feel personal and consistent with their health history.<ul>
 														<li>Brand-Aligned Conversational Style</li>
 														<li>Integration with Proprietary and ABHA Data</li>
 														<li>Real-Time Personalization</li>
@@ -1073,14 +1073,14 @@
 							<div class="container container--m container--inset-l">
 								<div class="row row--gutter-m row--reverse">
 									<div class="col a6-12 d1-2 i2-2">
-										<h2 class="h2 h2--m h2--gutter-m h2--pri  animate fadeInUp one">
+										<h2 class="h2 h2--m h2--gutter-m h2--pri  animate fadeInUp one wow">
 											Health Product Recommendations</h2>
 										<p class="section__heading section__heading--l wow" style="color: #000000;">Boost Engagement and Drive Loyalty
 										</p>
 										<div class="typeset ">
 											<div class="section__summary" >
 												<p style="color: #000000;">
-													WellnessGPT’s ABHA-compliant integration personalizes product recommendations by securely linking health records with user preferences and your catalog. This helps users find exactly what they need, boosting engagement and brand loyalty.												<ul class="wow">
+													WellnessGPT’s ABHA-compliant integration personalizes product recommendations by securely linking health records with user preferences and your catalog. This helps users find exactly what they need, boosting engagement and brand loyalty.<ul>
 													<li>Catalog-Based Personalization</li>
 													<li>ABHA-Driven Product Personalization</li>
 													<li>Health Goal Alignment with User Preferences</li>
@@ -1303,7 +1303,7 @@
 							<div class="container container--m container--inset-l">
 								<div class="row row--gutter-m">
 									<div class="col a6-12 d1-2 i2-2">
-										<h2 class="h2 h2--m h2--gutter-m h2--pri  animate fadeInUp one">Build AI-native digital health products</h2>
+										<h2 class="h2 h2--m h2--gutter-m h2--pri  animate fadeInUp one wow">Build AI-native digital health products</h2>
 										<p class="section__heading section__heading--l wow" style="color: #000000;">Powered with Wellness Score</p>
 										<div class="typeset ">
 											<div class="section__summary">
