--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
 	<link rel="stylesheet" href="assets/css/animate.css">
 	<title itemprop="name">WellnessGPT for business | HeyDoc AI</title>
     <style>
+		body {
+	    overflow-x: hidden;
+        }
 	</style>
 
 </head>
