--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 										<img src="img/icon/certified.png" alt="HeyDoc AI is certified by NHA & ABDM" class="logobadge">
 
 									</div>
-									<div class="logo-badges-mobile" >
+									<div class="logo-badges-mobile" style="margin-bottom: 50px;padding-bottom: 30px; ;">
 										<img src="img/icon/googleai.png" alt="HeyDoc AI is certified by NHA & ABDM" class="badge">
 				
 										<img src="img/icon/ms.png" alt="HeyDoc AI is certified by NHA & ABDM" class="badge">
@@ -224,7 +224,7 @@
 							<h2 class="section-title">WellnessGPT integrations</h2>
 							</div>
 
-							<div class="app-badges cards-container" style="padding: 20px 0px 40px 0px;">
+							<div class="app-badges cards-container" style="padding: 40px 0px 40px 0px;">
 								<div class="card" style=" background-color: #fff;">
 									<div class="card-image">
 										<img src="img/services/download (3).png" alt="AI-Powered Doctor Discovery with HeyDoc AI's WellnessGPT">
