modifed yt link

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 							
 							<div style="position: relative; overflow: hidden; width: 100%; padding-top: 56.25%;margin-top: 20px;">
 								<iframe 
-									src="https://www.youtube.com/embed/fSD65B0AXIQ?vq=hd1080p&rel=0&modestbranding=1&autohide=1&mute=1&showinfo=0&controls=0&autoplay=1&loop=1&disablekb=1&playlist=fSD65B0AXIQ" 
+									src="https://www.youtube.com/embed/owhRlHRyMdE?vq=hd1080p&rel=0&modestbranding=1&autohide=1&mute=1&showinfo=0&controls=0&autoplay=1&loop=1&disablekb=1" 
 									style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border: none;" 
 									title="WellnessGPT" 
 									frameborder="0" 
@@ -1779,7 +1779,7 @@
 															class="a2 footer__icon icon icon--twitter" aria-label="twitter" target="_blank" rel="noopener" style="color: #000000;"></a>
 															<a href="https://www.facebook.com/heydoc.co.in/" class="a2 footer__icon icon icon--facebook"
 															aria-label="facebook" target="_blank" rel="noopener" style="color: #000000;"></a>
-															<a href="https://youtube.com/@heydoc3305?si=zds57NHp6f_dR1qX"
+															<a href="https://youtube.com/@heydocai?si=qcBqkBiHFHj_kJ-p"
 															class="a2 footer__icon icon icon--youtube" aria-label="youtube" target="_blank" rel="noopener" style="color: #000000;"></a>
 															<a href="https://www.instagram.com/heydoc.india?igsh=MXFqMDZuMDEyY2xpbA%3D%3D&utm_source=qr" class="a2 footer__icon icon icon--instagram"
 															aria-label="instagram" target="_blank" rel="noopener" style="color: #000000;"></a>
@@ -2160,7 +2160,7 @@
 								<a
                                 href="https://www.facebook.com/heydoc.co.in/" class="a2 footer__icon icon icon--facebook"
                                 aria-label="facebook" target="_blank" rel="noopener"></a>
-								<a href="https://youtube.com/@heydoc3305?si=zds57NHp6f_dR1qX"
+								<a href="https://youtube.com/@heydocai?si=qcBqkBiHFHj_kJ-p"
                                 class="a2 footer__icon icon icon--youtube" aria-label="youtube" target="_blank" rel="noopener"></a>
 								<a
                                 href="https://www.instagram.com/heydoc.india?igsh=MXFqMDZuMDEyY2xpbA%3D%3D&utm_source=qr" class="a2 footer__icon icon icon--instagram"
