modifed yt link

--- a/index.html
+++ b/index.html
@@ -2163,7 +2163,7 @@
 								<a href="https://youtube.com/@heydocai?si=qcBqkBiHFHj_kJ-p"
                                 class="a2 footer__icon icon icon--youtube" aria-label="youtube" target="_blank" rel="noopener"></a>
 								<a
-                                href="https://www.instagram.com/heydoc.india?igsh=MXFqMDZuMDEyY2xpbA%3D%3D&utm_source=qr" class="a2 footer__icon icon icon--instagram"
+                                href="https://www.instagram.com/heydoc_ai" class="a2 footer__icon icon icon--instagram"
                                 aria-label="instagram" target="_blank" rel="noopener"></a>
 								<a href="https://in.linkedin.com/company/heydoc-healthtech"
                                 class="a2 footer__icon icon icon--linkedin" aria-label="linkedin" target="_blank" rel="noopener" ></a>
