modifed metadata and sitemap

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=5" />
 	<meta name="robots" content="index, follow" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta name="description" content="Personalized, AI-powered healthcare with ABHA integration. Manage your medical records, book appointments, and receive tailored health insights with WellnessGPT.">
-    <meta name="keywords" content="HeyDoc AI, HeyDoc, hey doc,hey doc ai, Wellness, WellnessGPT, AI healthcare, ABHA, PHR, Ayushman Bharat, health management, wellness score, medical records, personalized healthcare, health tracker, fitness, nutrition, mental health, telemedicine, family health tracking, insurance management">
-	<meta property="og:title" content="WellnessGPT for business - Power your digital health product with India's only AI model built on government's ABDM">
-    <meta property="og:description" content="Personalized, AI-powered healthcare with ABHA integration. Manage your medical records, book appointments, and receive tailored health insights with WellnessGPT.">
+	<meta name="description" content="Transform your digital health platform with WellnessGPT. India's first ABHA-compliant AI model, backed by Google and Microsoft powers personalized care, real-time insights, and tailored recommendations to enhance user engagement and drive business growth.">
+	<meta name="keywords" content="WellnessGPT, wellness-gpt,wellnessgpt, HeyDoc, HeyDoc AI, digital health solutions, healthcare AI, personalized healthcare, ABHA compliance, PHR integration, Ayushman Bharat, health insights, wellness score, AI-powered health, health chatbot, fitness tracking, telemedicine, family health solutions, insurance recommendations, CXO digital health, health product recommendations, patient engagement tools, data-driven healthcare, wellness AI">
+	<meta property="og:title" content="WellnessGPT for Business - Revolutionizing Digital Health with Personalized AI Solutions">
+	<meta property="og:description" content="WellnessGPT empowers digital health platforms with ABHA-compliant AI for personalized care, tailored recommendations, and data-driven insights. Power your platform today.">	
     <meta property="og:image" content="img/logo/url-image.png">
     <meta property="og:url" content="https://www.wellness-gpt.com">
 	<link rel="canonical" href="https://www.wellness-gpt.com">
