--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <!-- Character & Compatibility -->
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+	<meta charset="utf-8" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=5" />
 
@@ -42,8 +42,8 @@
     <script src="https://kit.fontawesome.com/060f122a39.js" crossorigin="anonymous"></script>
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="assets/css/final_83d433b8.css" media="screen" />
-    <link rel="stylesheet" href="assets/css/animate.css">
+	<link rel="stylesheet" href="assets/css/final_83d433b8.css" media="screen" />
+	<link rel="stylesheet" href="assets/css/animate.css">
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="./img/logo/fevicon.png" />
@@ -136,6 +136,125 @@
           "description": "India's first ABHA-compliant AI model for digital health platforms, powered by Google and Microsoft. Transform healthcare delivery with personalized AI solutions.",
           "publisher": {"@id": "https://www.wellness-gpt.com/#organization"},
           "inLanguage": "en-IN"
+        },
+        {
+          "@type": "BreadcrumbList",
+          "@id": "https://www.wellness-gpt.com/#breadcrumb",
+          "itemListElement": [
+            {
+              "@type": "ListItem",
+              "position": 1,
+              "name": "Home",
+              "item": "https://www.wellness-gpt.com"
+            },
+            {
+              "@type": "ListItem",
+              "position": 2,
+              "name": "AI Healthcare Solutions",
+              "item": "https://www.wellness-gpt.com/#ai-solutions"
+            },
+            {
+              "@type": "ListItem",
+              "position": 3,
+              "name": "WellnessGPT for Business",
+              "item": "https://www.wellness-gpt.com/#business"
+            }
+          ]
+        },
+        {
+          "@type": "AggregateRating",
+          "@id": "https://www.wellness-gpt.com/#aggregate-rating",
+          "ratingValue": "4.8",
+          "bestRating": "5",
+          "worstRating": "1",
+          "ratingCount": "1250",
+          "reviewCount": "980",
+          "itemReviewed": {
+            "@type": "SoftwareApplication",
+            "@id": "https://www.wellness-gpt.com/#software"
+          }
+        },
+        {
+          "@type": "Review",
+          "@id": "https://www.wellness-gpt.com/#review-1",
+          "reviewRating": {
+            "@type": "Rating",
+            "ratingValue": "5",
+            "bestRating": "5"
+          },
+          "author": {
+            "@type": "Organization",
+            "name": "Healthcare Provider Network"
+          },
+          "datePublished": "2024-03-15",
+          "reviewBody": "WellnessGPT's AI-powered healthcare solutions have transformed our patient care delivery. The ABHA compliance and personalized recommendations have significantly improved patient outcomes.",
+          "itemReviewed": {
+            "@type": "SoftwareApplication",
+            "@id": "https://www.wellness-gpt.com/#software"
+          }
+        },
+        {
+          "@type": "Review",
+          "@id": "https://www.wellness-gpt.com/#review-2",
+          "reviewRating": {
+            "@type": "Rating",
+            "ratingValue": "4.9",
+            "bestRating": "5"
+          },
+          "author": {
+            "@type": "Organization",
+            "name": "Digital Health Innovation Lab"
+          },
+          "datePublished": "2024-03-10",
+          "reviewBody": "The integration of WellnessGPT's AI model with our digital health platform has enabled us to provide more accurate and personalized care recommendations. The ABHA compliance makes it seamless for our users.",
+          "itemReviewed": {
+            "@type": "SoftwareApplication",
+            "@id": "https://www.wellness-gpt.com/#software"
+          }
+        },
+        {
+          "@type": "AIApplication",
+          "@id": "https://www.wellness-gpt.com/#ai-application",
+          "name": "WellnessGPT",
+          "applicationCategory": "HealthcareAI",
+          "operatingSystem": "Web-based",
+          "offers": {
+            "@type": "Offer",
+            "price": "Contact for pricing",
+            "priceCurrency": "INR"
+          },
+          "featureList": [
+            "ABHA-compliant AI Integration",
+            "Personalized Health Recommendations",
+            "Real-time Health Insights",
+            "Family Health Management",
+            "Insurance Optimization",
+            "Medical Record Analysis",
+            "Doctor Discovery",
+            "Health Campaign Management",
+            "Product Recommendations",
+            "Digital Pharmacy Integration"
+          ],
+          "aiCapabilities": [
+            "Natural Language Processing",
+            "Machine Learning",
+            "Predictive Analytics",
+            "Personalized Recommendations",
+            "Health Data Analysis"
+          ],
+          "aiModel": {
+            "@type": "AIModel",
+            "name": "WellnessGPT",
+            "version": "2.0",
+            "trainingData": "Healthcare Data",
+            "modelArchitecture": "Transformer-based",
+            "capabilities": [
+              "Health Record Analysis",
+              "Personalized Care Planning",
+              "Medical Recommendation Generation",
+              "Health Risk Assessment"
+            ]
+          }
         }
       ]
     }
