--- a/index.html
+++ b/index.html
@@ -898,7 +898,7 @@
 					<!-- shopping malls -->
 					<div id="section-3" class="overviewWithVideoGraphicSlideshow state__section propagate-theme-white">
 
-						<div class="section section--inset-s " style="background-color: rgb(242, 240, 255);">
+						<div class="section section--inset-s " style="background-color: rgb(255, 255, 255);">
 							<div class="container container--m container--inset-l">
 								<div class="row row--gutter-m ">
 									<div class="col a6-12 d1-2 i2-2">
@@ -1134,7 +1134,7 @@
 
 					<div id="section-6" class="overviewWithVideoGraphicSlideshow state__section propagate-theme-white">
 
-						<div class="section section--inset-s " style="background-color: #f3fffe;">
+						<div class="section section--inset-s " style="background-color: #ffffff;">
 							<div class="container container--m container--inset-l">
 								<div class="row row--gutter-m row--reverse">
 									<div class="col a6-12 d1-2 i2-2">
@@ -1364,7 +1364,7 @@
 					<div id="section-3" class="overviewWithVideoGraphicSlideshow state__section propagate-theme-white">
 
 						<div class="section section--inset-s "
-							style="background-color: rgb(246, 252, 255); box-shadow: rgba(0, 0, 0, 0.16)">
+							style="background-color: rgb(255, 255, 255); box-shadow: rgba(0, 0, 0, 0.16)">
 							<div class="container container--m container--inset-l">
 								<div class="row row--gutter-m">
 									<div class="col a6-12 d1-2 i2-2">
