--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 
     <!-- Fonts & Icons -->
     <script src="https://kit.fontawesome.com/060f122a39.js" crossorigin="anonymous"></script>
+    <link rel="preload" href="assets/fonts/MonaSans-VariableFont_wdth,wght.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="assets/fonts/MonaSans-Italic-VariableFont_wdth,wght.ttf" as="font" type="font/ttf" crossorigin>
 
     <!-- Stylesheets -->
 	<link rel="stylesheet" href="assets/css/final_83d433b8.css" media="screen" />
@@ -664,7 +666,7 @@
 
 	<script>(function () { document.body.className += ' js'; })();</script>
 
-	<div class="body__inner">
+	<div class="body">
 
 		<div class="header header--reveal header--secondary" role="banner">
 			<div class="header__shader ">
@@ -766,7 +768,7 @@
 
 									<p class="h2--sec carousel__smaller_title wow typeset">WellnessGPT for Healthcare AI Agents</p>
 									<h2 class="hero-tagline carousel__title wow typeset">WellnessGPT's Agentic AI <br>for<br> Clinical care, Orchestration, Auditable Memory</h2>
-									<p class="h2--sec carousel__desc wow typeset">Deploy Domain-Specialized care agents, an Enterprise Agentic Orchestration engine<br> and HealthMem - a FHIR/EPIC aligned, temporal memory <br> designed for clinical recall, compliance and fast retrieval</p>
+									<p class="carousel__desc wow typeset"style="font-size: 17px; font-weight: 300;">Deploy Domain-Specialized care agents, an Enterprise Agentic Orchestration engine<br> and HealthMem - a FHIR/EPIC aligned, temporal memory <br> designed for clinical recall, compliance and fast retrieval</p>
 									<div  style="margin-bottom: 20px; ">
 										<div class="particles__container"><canvas></canvas></div><a
 											href="https://forms.gle/ovwj9HLPMaPL4sgh6"
@@ -1406,7 +1408,6 @@
 											</div>
 										</div>
 									</div>
-
 									<div class="col a6-12 d1-2 i2-2">
 
 
@@ -1700,7 +1701,7 @@
 
 								<h2 class="h2 h2--m h2--gutter-m h2--pri  animate fadeInUp one">WellnessGPT powers HeyDoc Application</h2>
 								<p class="h2--sec carousel__desc wow typeset">
-									<span style="color: #FFF;font-weight: 600; font-family: Arial, Helvetica, sans-serif; text-transform: capitalize; transition-delay: 0ms;">Wellness</span><span style="color: #5e17eb;font-weight: 600; font-family: Arial, Helvetica, sans-serif; text-transform: capitalize; transition-delay: 3ms;">GPT</span> understands that every user is unique, creating personalized health profiles to deliver tailored care and support.</p>
+									<span style="color: #FFF;font-weight: 600; text-transform: capitalize; transition-delay: 0ms;">Wellness</span><span style="color: #d1baff;font-weight: 600; text-transform: capitalize; transition-delay: 3ms;">GPT</span> understands that every user is unique, creating personalized health profiles to deliver tailored care and support.</p>
 								</h2>
 							</div>
 							<div class="slider slider--inset-l" data-slider-init="" data-resize-arrows="">
