--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@
 								</div>
 								<div class="card-content">
 									<h2 style="font-size: 26px;">Agentic <br>Orchestration Engine</h2>
-									<p style="font-size: 18px;">Safely orchestrates multi-agent workflows, integrates with EHR/HMIS systems and ensures compliance, observability, and human-in-loop oversight.</p>
+									<p style="font-size: 18px;">Safely orchestrates multi-agent workflows, integrates with EHR/HMIS systems, ensures compliance, observability, human-in-loop oversight.</p>
 									<a href="https://forms.gle/ovwj9HLPMaPL4sgh6" class="comic-button wow" target="_blank" rel="noopener">Talk with our team →</a>
 								</div>
 								
