--- a/index.html
+++ b/index.html
@@ -767,8 +767,8 @@
 								<div class=" carousel__desc_align">
 
 									<p class="h2--sec carousel__smaller_title wow typeset">WellnessGPT for Healthcare AI Agents</p>
-									<h2 class="hero-tagline carousel__title wow typeset">WellnessGPT's Agentic AI <br>for<br> Clinical care, Orchestration, Auditable Memory</h2>
-									<p class="carousel__desc wow typeset"style="font-size: 17px; font-weight: 300;">Deploy Domain-Specialized care agents, an Enterprise Agentic Orchestration engine<br> and HealthMem - a FHIR/EPIC aligned, temporal memory <br> designed for clinical recall, compliance and fast retrieval</p>
+									<h2 class="hero-tagline carousel__title wow typeset">Healthcare Needs Reliable AI<br>WellnessGPT Makes It Possible</h2>
+									<p class="carousel__desc wow typeset"style="font-size: 17px; font-weight: 300;">Agents that remember context, follow workflows, and deliver consistent care every time <br>A unified platform combining clinical AI agents, orchestration, and real-time healthcare memory.</p>
 									<div  style="margin-bottom: 20px; ">
 										<div class="particles__container"><canvas></canvas></div><a
 											href="https://forms.gle/ovwj9HLPMaPL4sgh6"
