--- a/index.html
+++ b/index.html
@@ -768,7 +768,7 @@
 
 									<p class="h2--sec carousel__smaller_title wow typeset">WellnessGPT for Healthcare AI Agents</p>
 									<h2 class="hero-tagline carousel__title wow typeset">Healthcare Needs Reliable AI<br>WellnessGPT Makes It Possible</h2>
-									<p class="carousel__desc wow typeset"style="font-size: 17px; font-weight: 300;">Agents that remember context, follow workflows, and deliver consistent care every time <br>A unified platform combining clinical AI agents, orchestration, and real-time healthcare memory.</p>
+									<p class="carousel__desc wow typeset"style="font-size: 17px; font-weight: 300;"> Agentic AI that remembers patients, follows clinical workflows, and delivers consistent, auditable care <br> with access to longitudinal patient memory safely and at scale</p>
 									<div  style="margin-bottom: 20px; ">
 										<div class="particles__container"><canvas></canvas></div><a
 											href="https://forms.gle/ovwj9HLPMaPL4sgh6"
